fix dashboard overflow styles

--- a/src/modules/elements/dashboard/style.pcss
+++ b/src/modules/elements/dashboard/style.pcss
@@ -23,8 +23,8 @@
 
 	&--overflow {
 		.tribe-editor__dashboard {
-			left: -15px;
-			width: calc(100% + 30px);
+			margin-left: -29px;
+			margin-right: -29px;
 		}
 	}
 }
